# savellysKone

./: .gitignore  GUI_README.md  IMPLEMENTATION_SUMMARY.md  MIDI_PARSER_README.md  PIANO_ROLL_README.md  PLAY_MIDI_FEATURE.md  README.md  README_GUI.md  RECURSION_PREVENTION_IMPLEMENTATION.md  RECURSION_TEST_INSTRUCTIONS.txt  U48_jouset01.mid  U48_jouset02.mid  U48_kakkosTeema.mid  U48_kakkosTeema_ääni2.mid  U48_kakkosteema_ääni1.mid  U48_klara01.mid  U48_perc01.mid  U48_perc02.mid  Vakinoita_lead.mid  Vakinoita_rummut.mid  Vakinoita_rummut01.mid  Vakinoita_toinenaani.mid  check_sampler_availability.py  create_final_screenshot.py  create_visual_demos.py  demo_gui.py  demo_piano_roll.py  demo_recursion_prevention.py  example_midi_parser_usage.py  example_run_gui.py  gengram_midimelody.py  gengramparser.py  gengramparser2.py  in_grammar.txt  locrianArp.mid  midiMelodia.grammar  midi_parser.py  musical_scales.py  nististoori.grammar  output.mid  (+103 more)
simpleSampler/: AUDIO_DEBUG_REPORT.md  CMakeLists.txt  GUI_INTEGRATION.md  INTEGRATION_SUMMARY.md  README.md  USAGE.md  USAGE_OLD.md  check_integration.py  create_test_midi.py  example_integration.py  sampler_player.py  test_audio.cpp
simpleSampler/.github/: copilot-instructions.md
simpleSampler/include/: AudioEngine.h  Envelope.h  MidiParser.h  SineWaveSynth.h  SoundFontSynth.h
simpleSampler/src/: AudioEngine.cpp  Envelope.cpp  MidiParser.cpp  SineWaveSynth.cpp  SoundFontSynth.cpp  main.cpp
